--- a/styles.css
+++ b/styles.css
@@ -9932,6 +9932,8 @@ h1, h2, h3, h4, h5, h6, .album-title, .album-description, .hero-title, .hero-slo
 
 .white-bg {
   background-color: rgb(219, 219, 219);
+  margin-left: 30px;
+  margin-right: 30px;
   padding-right: 20px;
   padding-left: 20px;
   padding-top: 24px;
