--- a/styles.css
+++ b/styles.css
@@ -291,6 +291,16 @@ img {
   border-style: none
 }
 
+img.profile {
+  border-radius: 50%;
+  border:2px solid #fff;
+  -moz-box-shadow: 0px 6px 5px #ccc;
+  -webkit-box-shadow: 0px 6px 5px #ccc;
+  box-shadow: 0px 6px 5px #ccc;
+  -moz-border-radius:190px;
+  -webkit-border-radius:190px;
+}
+
 svg:not(:root) {
   overflow: hidden
 }
@@ -543,6 +553,10 @@ hr {
   border-radius: .25rem;
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .075);
   box-shadow: 0 1px 2px rgba(0, 0, 0, .075)
+}
+
+.img {
+  border-radius: 50%;
 }
 
 .figure {
