--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,10 @@ body {
   background-color: #fff
 }
 
+section.passion-projects {
+  background-color: #f5f5f5;
+}
+
 [tabindex="-1"]:focus {
   outline: 0 !important
 }
